# utils-c

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE
cbuf/: cbuf.c  cbuf.h
dll/: dll.c  dll.h
dummy/: cbuf.c  dll.c
examples/: cbuf.c  dll.c  hook.c
hook/: hook.c  hook.h
include/: cbuf.h  dll.h  hook.h
src/: hook.c
test/: cbuf.c  cbuf.cpp  dll.c  dll.cpp  main.cpp
